--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,15 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# OS generated #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Customs
 /model/
 /vosk-api/
@@ -137,11 +146,4 @@ dmypy.json
 .mypy.ini
 .pylintrc
 .mustache
-# OS generated #
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+*.ipynb
